fixed aligning of SML views for demo app button

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,16 +74,11 @@ input#summonerNameInput {
     background-color: transparent; }
 
 /* line 98, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
-#btn-demo {
-  top: 60vh;
-  left: 7.5vw; }
-
-/* line 103, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
 i.material-icons.left {
   font-size: 1.2em;
   margin-right: 0px; }
 
-/* line 107, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+/* line 102, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
 .elementToFadeInAndOut {
   opacity: 1;
   amimation: fade 2s linear; }
@@ -95,11 +90,11 @@ i.material-icons.left {
     opacity: 1; } }
 
 @media screen and (min-width: 1px) and (max-width: 479px) {
-  /* line 129, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 124, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   .header {
     background: none;
     height: 50vh; }
-  /* line 134, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 129, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   .small-header {
     width: 99vw;
     height: 50vh;
@@ -107,19 +102,19 @@ i.material-icons.left {
     background-size: cover;
     -o-background-size: cover;
     margin-bottom: 0px; }
-  /* line 143, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 138, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   h1#lane-header-race {
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 18.7vw; }
-  /* line 149, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 144, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   p#quote-one.landing-quote.lighter {
     margin-top: -5vh;
     margin-bottom: 0px;
     top: 18.5vh;
     left: 0px;
     font-size: 6vw; }
-  /* line 157, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 152, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   input#summonerNameInput {
     margin-bottom: 0px;
     margin-top: 0px;
@@ -127,11 +122,15 @@ i.material-icons.left {
     left: -5px;
     width: 86%;
     font-size: 7vw; }
-  /* line 166, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 161, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   .btn-login {
     top: 35vh;
     left: 4px;
     font-size: 8vw; }
+  /* line 167, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  #btn-demo {
+    top: 25vh;
+    left: 20vw; }
   /* line 172, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   #footer-row {
     margin-bottom: 0px; }
@@ -155,21 +154,29 @@ i.material-icons.left {
   .btn-login {
     margin-top: -8.5vh;
     left: 85px;
-    font-size: 4vw; } }
+    font-size: 4vw; }
+  /* line 202, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  #btn-demo {
+    top: 29vh;
+    left: 19.5vw; } }
 
 @media screen and (min-width: 993px) {
-  /* line 206, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 211, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   p#quote-one.landing-quote.lighter {
     margin-top: -3vh;
     margin-bottom: 0px;
     top: 22.5vh;
     left: 35px;
     font-size: 1.4em; }
-  /* line 214, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  /* line 219, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
   .btn-login {
     margin-top: -8.5vh;
     left: 85px;
-    font-size: 3.1vw; } }
+    font-size: 3.1vw; }
+  /* line 225, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_landing-page.scss */
+  #btn-demo {
+    top: 29vh;
+    left: 10.5vw; } }
 
 /* line 2, /Users/StyeL/DevLeague/League-ANalytical-Examiner-LANE-/sass/_map-scrubber.scss */
 #map-d {
